--- a/templates/gene.html
+++ b/templates/gene.html
@@ -496,104 +496,10 @@
             </div>
          </div>
 
+         {% include 'includes/chart-option.html' %}
          <div class="row">
             <div class="col-sm-12">
-               <div id="chart-gene-option" class="shiny-plot-output" style="margin-top: 20px; display: none;">
-                  Color of group high:
-                  <select class="chart-gene-option-color1">
-                     <option value="black">black</option>
-                     <option value="gray">gray</option>
-                     <option value="silver">silver</option>
-                     <option value="red" selected>red</option>
-                     <option value="pink">pink</option>
-                     <option value="orange">orange</option>
-                     <option value="blue">blue</option>
-                     <option value="green">green</option>
-                     <option value="violet">violet</option>
-                  </select>&emsp;
-                  Line width (H):
-                  <select class="chart-gene-option-width1">
-                     <option value="1.0">1.0</option>
-                     <option value="2.0" selected>2.0</option>
-                     <option value="3.0">3.0</option>
-                     <option value="4.0">4.0</option>
-                     <option value="5.0">5.0</option>
-                     <option value="6.0">6.0</option>
-                     <option value="7.0">7.0</option>
-                     <option value="8.0">8.0</option>
-                     <option value="9.0">9.0</option>
-                  </select>&emsp;
-                  Color of group low:
-                  <select class="chart-gene-option-color2">
-                     <option value="black">black</option>
-                     <option value="gray">gray</option>
-                     <option value="silver">silver</option>
-                     <option value="red">red</option>
-                     <option value="pink">pink</option>
-                     <option value="orange">orange</option>
-                     <option value="blue" selected>blue</option>
-                     <option value="green">green</option>
-                     <option value="violet">violet</option>
-                  </select>&emsp;
-                  Line width (L):
-                  <select class="chart-gene-option-width2">
-                     <option value="1.0">1.0</option>
-                     <option value="2.0" selected>2.0</option>
-                     <option value="3.0">3.0</option>
-                     <option value="4.0">4.0</option>
-                     <option value="5.0">5.0</option>
-                     <option value="6.0">6.0</option>
-                     <option value="7.0">7.0</option>
-                     <option value="8.0">8.0</option>
-                     <option value="9.0">9.0</option>
-                  </select>&emsp;
-                  Censors color (H):
-                  <select class="chart-gene-option-marker-color1">
-                     <option value="black" selected>black</option>
-                     <option value="gray">gray</option>
-                     <option value="silver">silver</option>
-                     <option value="red">red</option>
-                     <option value="pink">pink</option>
-                     <option value="orange">orange</option>
-                     <option value="blue">blue</option>
-                     <option value="green">green</option>
-                     <option value="violet">violet</option>
-                  </select>&emsp;
-                  Censors color (L):
-                  <select class="chart-gene-option-marker-color2">
-                     <option value="black" selected>black</option>
-                     <option value="gray">gray</option>
-                     <option value="silver">silver</option>
-                     <option value="red">red</option>
-                     <option value="pink">pink</option>
-                     <option value="orange">orange</option>
-                     <option value="blue">blue</option>
-                     <option value="green">green</option>
-                     <option value="violet">violet</option>
-                  </select>&emsp;
-
-                  <br><br>
-                  Follow up threshold (years):
-                  <select id="chart-time">
-                      <option value="0">-</option>
-                      <option value="3">3</option>
-                      <option value="5">5</option>
-                      <option value="10">10</option>
-                  </select>
-
-                  &emsp;
-                  Kaplan plot for EGFR
-                  <input type="number" id="chart-LP" placeholder="Lower Percentile" min="0" max="100" style="width: 150px;" />
-                  <input type="number" id="chart-HP" placeholder="Upper Percentile" min="0" max="100" style="width: 150px;" />
-
-                  <input type="button" value="Submit" onclick="chgChartTime(true)" />
-               </div>
-               <div id="chart-gene" class="shiny-plot-output" style="width: 100% ; height: 600px"></div>
                <div id="chart-cox" class="shiny-plot-output" style="width: 100%;"></div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-sm-12">
                <div id="chart2-gene" class="shiny-plot-output" style="width: 100% ; height: 600px"></div>
                <div id="chart-cox-option" class="shiny-plot-output" style="width: 100%; margin-bottom: 30px;"></div>
             </div>
@@ -673,4 +579,5 @@
    }
 </script>
 <script src="static/gene.js"></script>
+<script src="static/chart.js"></script>
 {% endblock %}
