--- a/templates/more_gene.html
+++ b/templates/more_gene.html
@@ -120,21 +120,9 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>
-                        <div id="chart" class="shiny-plot-output" style="width: 100%;"></div>
-                        <div id="chart2" class="shiny-plot-output" style="width: 100%; margin-bottom:30px;"></div>
-                        <div id="chart-upload" class="shiny-plot-output" style="width: 100%;"></div>
-                    </div>
-                </div>
-            </div>
+            {% include 'includes/chart-option.html' %}
         </div>
-
-
     </div> <!-- end container -->
-
 </div>
 
 <form id="downloadForm" action="api/more_gene/download" target="_blank" method="POST">
@@ -199,4 +187,5 @@
     }
 </script>
 <script src="static/more_gene.js"></script>
+<script src="static/chart.js"></script>
 {% endblock %}
